--- a/index.html
+++ b/index.html
@@ -2,9 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="keywords" content="bar, bar guide, bar setup, mixology, liquor, liqueur, garnish, cocktail, cocktails, spirit, alcohol">
+  <meta name="description" content="This is an unofficial bar guide that may serve as a go-to resource for bartenders and everyone interested in knowing more about spirits and bar business.">
   <title>B-Bar Bar Guide</title>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,300italic,400italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/responsive.css">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
+
 <body>
-  
+  <div class="container">
+    <div id="sidebar">
+      <div class="logo">BBar and Grill</div>
+      <p>Bar guide</p>
+      <ul>
+        <li><a href="specialty-cocktails.html"><img src="img/specialty-cocktails.svg" alt="specialty cocktails">Specialty cocktails</a></li>
+        <li><a href="classic-cocktails.html"><img src="img/classic-cocktails.svg" alt="classic cocktails">Classic cocktails</a></li>
+        <li><a href="liqor.html"><img src="img/liqor.svg" alt="liqor">Liqour</a></li>
+        <li><a href="liqueur.html"><img src="img/liqueur.svg" alt="liqueur">Liqueur</a></li>
+        <li><a href="wine.html"><img src="img/wine.svg" alt="wine">Wine</a></li>
+        <li><a href="beer.html"><img src="img/beer.svg" alt="beer">Beer</a></li>
+        <li><a href="garnish.html"><img src="img/garnish.svg" alt="garnish">Garnish</a></li>
+        <li><a href="bar-setup.html"><img src="img/bar-setup.svg" alt="bar-setup">Bar setup</a></li>
+      </ul>
+    </div> <!-- #sidebar ends -->
+
+    <section id="right-panel">
+      <p id="contact"><span>Address:</span> 40 East 4th Street, New York, NY 10003  <span>Tel:</span> (212)-475-2220 <span>Website:</span> bbarandgrill.com</p>
+
+      <section id="content-area">
+        <h1>Specialty cocktails</h1>
+
+        <div class="info-cards-area">
+          <article class="info-card">
+            <div class="info-card-header">
+              <h3>Cardinal sin</h3>
+            </div>
+            <div class="info-card-content">
+              <img src="#" alt="Cardinal Sin">
+              <div class="description">
+                <h4>Cardinal Sin</h4>
+                <p>Description</p>
+                <table>
+                  <tr>
+                    <th colspan="2">Ingridients</th>
+                    <th>Preparation</th>
+                  </tr>
+                  <tr>
+                    <td>1.5oz</td>
+                    <td>Jalapeno infused tequila</td>
+                    <td rowspan="4">Preparation goes here</td>
+                  </tr>
+                  <tr>
+                    <td>1.0oz</td>
+                    <td>Peach puree</td>
+                  </tr>
+                  <tr>
+                    <td>0.5oz</td>
+                    <td>Lime Juice</td>
+                  </tr>
+                  <tr>
+                    <td>0.5oz</td>
+                    <td>Simple syrup</td>
+                  </tr>
+                </table>
+              </div>
+            </div> <!-- .info-card-content ends -->
+          </article> <!-- .info-card ends -->
+        </div> <!-- .info-cards-area -->
+
+      </section> <!-- #content-area ends -->
+
+    </section> <!-- #right-panel ends -->
+
+  </div> <!-- .wrapper ends -->
 </body>
 </html>
