added beer, finished classic cocktails

--- a/beer.html
+++ b/beer.html
@@ -5,23 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <meta name="keywords" content="bar, bar guide, bar setup, mixology, liquor, liqueur, garnish, cocktail, cocktails, spirit, alcohol">
   <meta name="description" content="This is an unofficial bar guide that may serve as a go-to resource for bartenders and everyone interested in knowing more about spirits and bar business.">
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+  <meta name="application-name" content="&nbsp;"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
   <title>B-Bar Bar Guide</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
@@ -94,7 +97,7 @@
           <p><strong>English</strong></br>Samuel Smith's Nut Brown Ale</br>Bell's Best Brown</br>Turbodog</br>Maduro Oatmeal Brown Ale</br>Newcastle Brown Ale <img src="img/bbar-mark.svg" alt="bbar mark" class="toggle newcastle-toggle" id="bbar-mark"> <span class="orange note toggle newcastle-toggle">Click to know more</span></p>
           <div class="brand-card" id="newcastle-card">
             <h4>Newcastle Brown Ale</h4>
-            <p><img src="img/beer-newcastle.jpg" alt="cab sauv" class="brand-img"> Features fewer hops for a less bitter taste, a blend of light and dark malts for a unique, smooth flavor and a cool temperature for easy drinking.</p>
+            <p><img src="img/beer-newcastle.jpg" alt="newcastle" class="brand-img"> Features fewer hops for a less bitter taste, a blend of light and dark malts for a unique, smooth flavor and a cool temperature for easy drinking.</p>
             <p><strong>Brewery:</strong> Originally produced in Newcastle upon Tyne, but now brewed by Heineken at the John Smith's Brewery in Tadcaster, North Yorkshire.</p>
             <p><strong>Story:</strong> Newcastle Brown Ale is perceived in the UK as a working-man's beer, with a long association with heavy industry, the traditional economic staple of the North East of England. In export markets, it is seen as a trendy, premium import and is predominantly drunk by the young. It was one of the first beers to be distributed in a clear glass bottle and it is most readily associated with this form of dispense in the UK, being very rarely seen on draught.</p>
             <p><strong>ABV:</strong> 4.7%</p>
@@ -106,15 +109,117 @@
         </div>
         <h4>Porters</h4>
         <p>Porters originated in the UK, and are ientified by their dark color, a light roastiness, and a hint of molasses-like sweetness.</p>
+        <div class="liqour-level-2">
+          <p><strong>Baltic</strong></br>Gonzo Imperial Porter</br>Barrel-Aged Framinghammer</br>Smuttynose Baltic Porter</br>Bourbon Barrel Aged Shipwreck Porter</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Robust</strong></br>Smuttynose Robust Porter</br>Pig Iron Porter</br>Moonlight Porter</br>Black Butte Porter</br>Founders Porter <img src="img/bbar-mark.svg" alt="bbar mark" class="toggle porter-toggle" id="bbar-mark"> <span class="orange note toggle porter-toggle">Click to know more</span></p>
+          <div class="brand-card" id="porter-card">
+            <h4>Founders Porter</h4>
+            <p><img src="img/beer-porter.png" alt="porter" class="brand-img"> Pours silky black with a creamy tan head. The nose is sweet with strong chocolate and caramel malt presence. No absence of hops gives Founders’ robust porter the full flavor you deserve and expect. Cozy like velvet. It’s a lover, not a fighter.</p>
+            <p><strong>Brewery:</strong> Founders Brewing Co.: The Founders Family, a group of passionate beer enthusiasts, has grown around this simple philosophy: “We don’t brew beer for the masses. Instead, our beers are crafted for a chosen few, a small cadre of renegades and rebels who enjoy a beer that pushes the limits of what is commonly accepted as taste. In short, we make beer for people like us.”</p>
+            <p><strong>ABV:</strong> 6.5%</p>
+          </div></p>
+        </div>
         <h4>Stouts</h4>
+        <p>Stouts are dark, heavy, and roasted. Guinness is the most famous. Stouts can be made a veriety of ways with a number of added ingredients.</p>
+        <div class="liqour-level-2">
+          <p><strong>Dry</strong></br>Guinness Draught</br>Murphy's Irish Stout</br>Brooklyn Dry Irish Stout</br>Old #38 Stout</br>Cadillac Mountain Stout</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Sweet/Milk</strong></br>Samuel Smith's Organic Chocolate Stout</br>Left Hand Milk Stout</br>Young's Double Chocolate Stout</br>Creme Brulee (Imperial Milk Stout)</br>Merry Maker Gingerbread Stout</br>Trader Joe's Stockyard Oatmeal Stout</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Oatmeal</strong></br>Samuel Smith's Oatmeal Stout</br>Shakespeare Oatmeal Stout</br>Velvet Merlin</br>Barney Flats Oatmeal Stout</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Foreign/Export</strong></br>Partizan FES</br>Guinness Foreign Extra Stout</br>Lion Stout</br>Brooklyn Black Chocolate Stout</br>Founders Imperial Stout</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Russian Imperial</strong></br>Old Rasputin Russian Imperial Stout</br>Ten FIDY</br>Stone Imperial Russian Stout</br>Parabola (14% ABV)</p>
+        </div>
         <h4>Pale Ales</h4>
+        <p>Pale ales, and their hoppier cousins India Pale Ales. run the gamut from light and refreshing to heavy and nearly unpalatable. They are known by their trademark bitterness.</p>
+        <div class="liqour-level-2">
+          <p><strong>India Pale Ale</strong></br>Pride of Romsey I.P.A.</br>Burton Bridge Empire India Pale Ale</br>Tremont Brewery's IPA</br>Magic Hat Brewing Company's Blind Faith</br>Shipyard Brewing Company's Fuggles IPA</br></p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Imperial/Double</strong></br>90 Minute IPA</br>Pliny The Elder</br>Lagunitas Sucks (Brown Shugga Substitute Ale)</br>Founders Double Trouble</br>Hop Stoopid</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>American Pale Ales</strong></br>Sierra Nevada Pale Ale</br>Zombie Dust</br>Dale's Pale Ale</br>Founders Pale Ale</br>Doggie Style Classic Pale Ale</br> Lagunitas IPA <img src="img/bbar-mark.svg" alt="bbar mark" class="toggle ipa-toggle" id="bbar-mark"> <span class="orange note toggle ipa-toggle">Click to know more</span></p>
+          <div class="brand-card" id="ipa-card">
+            <h4>Lagunitas IPA</h4>
+            <p><img src="img/beer-ipa.jpg" alt="IPA" class="brand-img"> A well-rounded, highly drinkable IPA. A bit of Caramel Malt barley provides the richness that mellows out the twang of the hops.</p>
+            <p><strong>Brewery:</strong> From points distant and beyond we all converged on Petaluma in 1993 and '94 with an unenunciated desire to be more than we were before. The core of Lagunitas came from Chicago, St Louis, Memphis, Walker Creek, and the highlands of Quincy.</p>
+            <p>The Chicago contingent initiated the brewing and the gravitational effect of its suchness did the rest. We all loved the beer but the mission was larger than the ordinary joy of a hoppy-sweet quaff. It was driven unseen by an urge to communicate with people, to find our diasporidic tribe, and to connect with other souls adrift on a culture that had lost its center and spun its inhabitants to the four winds to wander lost and bereft with a longing to re-enter the light. Beer, we have learned, has always been a good lubricant for social intercourse!</p>
+            <p>The Lagunitas Brewing Co. was not so much an act of ordinary 'foundling' as it was willed into being by the unspoken desire of supportive beer-lovers in Northern California after which they continued to nurture their creation and urged us forward to fulfill the unifying needs of that same beer-loving diaspora from coast to coast and beyond. It is good to have friends!</p>
+            <p><strong>ABV:</strong> 6.2%</p>
+          </div>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Bitters</strong></br>Fuller's ESB</br>Hobgoblin</br>Sawtooth Ale</br>Redhook ESB</br>Wells Bombardier (English Premium Bitter)</p>
+        </div>
         <h4>Belgians</h4>
+        <p>Belgian beers can be dark or light, but are almost always rich and complex. They get their distinct flavors mainly from Belgian yeast.</p>
+        <div class="liqour-level-2">
+          <p><strong>Abbey/Trappist</strong></p>
+          <p>Trappist beer is brewed by Trappist breweries. Eleven monasteries — six in Belgium, two in the Netherlands and one each in Austria, Italy and United States — currently brew beer and sell it as Authentic Trappist Product.</p>
+          <div class="liqour-level-2">
+            <p><strong>Dubbel</strong></br>Westmalle Dubbel</br>Chimay Red/Premiere</br>Koningshoeven/La Trappe Dubbel</br>Achel 8 Bruin</br>Rochefort 6</p>
+          </div>
+          <div class="liqour-level-2">
+            <p><strong>Tripel</strong></br>Westmalle Tripel</br>Achel 8 Blond</br>Koningshoeven/La Trappe Tripel</br>Chimay White/Cinq Cents</p>
+          </div>
+          <div class="liqour-level-2">
+            <p><strong>Quadrupel</strong></br>Koningshoeven La Trappe ale</p>
+          </div>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Saison/Biere de Garde</strong></br>Saison</br>Red Barn</br>Hennepin</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Golden/Blonde</strong></br>Grimbergen Blonde</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Lambic/Gueuze</strong></br>Cantillion Iris</br>Cantillon Bruocsella (1900) Grand Cru</br>Lambickx</br>Lambrucha</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Flanders</strong></br>Duchesse De Bourgogne</br>Rodenbach Grand Cru</br>Cuvée Des Jacobins Rouge</br>Oude Tart</br>Red Poppy Ale</p>
+        </div>
         <h4>Sours</h4>
+        <p>Sours are just thet: sour. With a yogurt-like tartness, sours may be sored many ways, from introducingcertain yeast strains to leaving the beer exposed and letting nature have at it.</p>
+        <div class="liqour-level-2">
+          <p><strong>Wild</strong></br>Russian River Supplication</br>Wild Sour Series: Here Gose Nothin'</p>
+        </div>
+        <div class="liqour-level-2">
+          <p><strong>Berliner Weissbier</strong></br>Festina Pêche</br>Bell's Oarsman</br>Hottenroth Berliner Weisse</br>Evil Twin Justin Blåbær</p>
+        </div>
         <h4>Wheats</h4>
+        <p>Wheat beers can be light- or medium-bodied and are very versatile when it comes to adding other flavors or ingredients.</p>
+        <div class="liqour-level-2">
+          <p><strong>Hefeweizen</strong></br>Franziskaner Hefe-Weisse</br>Paulaner Hefe-Weissbier Naturtrüb</br>Sierra Nevada Kellerweis Hefeweizen</br>Widmer Hefeweizen</br>Brooklyn Greenmarket Wheat <img src="img/bbar-mark.svg" alt="bbar mark" class="toggle brooklyn-toggle" id="bbar-mark"> <span class="orange note toggle brooklyn-toggle">Click to know more</span></p>
+          <div class="brand-card" id="brooklyn-card">
+            <h4>Brooklyn Greenmarket Wheat</h4>
+            <p><img src="img/beer-brooklyn-wheat.png" alt="brooklyn" class="brand-img"> Brooklyn Greenmarket Wheat is a celebration of New York State agriculture, uniting local ingredients to create a beer with a mission.</p>
+            <p>We work with GrowNYC's Greenmarket to source grain for the brew - they connected us to Lakeview Organic Farms to provide 70% of the grain used in our mash. The hops are grown on a family farm outside of Syracuse owned by our own Technical Director Mary Wiles, who grew up there.</p>
+            <p><strong>Brewery:</strong> FLike our namesake borough, the Brooklyn Brewery is made up of a rich collection of characters from all over the world. In our Williamsburg home, these characters are dedicated to brewing and selling great beer and enriching the communities we serve. Together, these Brooklyners have assembled the skills needed to transform a home brewing hobby into an independent brewery with a brand that has become an international beacon for good beer.</p>
+            <p>Starting with our flagship Brooklyn Lager, the portfolio of Brooklyn Brewery has grown to a wide-ranging collection of beers, always keeping an eye to traditional brewing techniques, even as Brewmaster Garrett Oliver and his team seek to push the boundaries of beer. It’s now easy to find a smooth Brooklyn Lager, hoppy East IPA or roasty Brown Ale in your favorite watering holes. BLAST!, Sorachi Ace and Greenmarket Wheat are standing by on shelves near you, ready to be taken to parties, barbecues or your favorite chair. Each season brings beloved seasonals like Brooklyn Summer Ale and Brooklyn Black Chocolate Stout back to the shelves and taps, ushering in the joys of the changing weather.</p>
+            <p><strong>ABV:</strong> 5.0%</p>
+          </div>
+        </div>
+        <div class="liqour-level-2">
+        <p><strong>Dunkelweizen</strong></br>Weihenstephaner Hefeweissbier Dunkel</br>Franziskaner Hefe-Weisse Dunkel</br>Shiner Holiday Cheer</br>Samuel Adams Dunkelweizen</br>Josephs Brau Dunkelweizen</p>
+        </div>
+        <div class="liqour-level-2">
+        <p><strong>Witbier</strong></br>Hoegaarden Original White Ale</br>Blue Moon Belgian White</br>Allagash White</br>Shock Top Belgian White</br>Ommegang Witte</p>
+        </div>
       </div> <!-- .liqour-level-1 -->
     </div> <!-- .liqour -->
 
-
+    <h3>Graphic Taxonomy</h3>
+    <p>If you are more of a graphic type of person, below is a treat for your.</p>
+    <img src="img/beertaxonomy.jpg" alt="beer taxonomy">
 
   </section> <!-- #content-area -->
 
